[package]
name = "oairs"
authors = ["John Bowling <jremingtonbowling@gmail.com>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
nom = "7.1.3"
reqwest = { version = "0.11.15", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
save_json = { path = "./save_json" }
polars = { version = "0.27.2", features = ["lazy", "temporal", "json", "parquet", "horizontal_concat", "dot_product"] }
tokio = { version = "1.26.0", features = ["fs"]}
# Used by tokenizer:
anyhow = "1.0.70"
rustc-hash = "1.1.0"
base64 = "0.21.0"
once_cell = "1.17.1"
parking_lot = "0.12.1"
fancy-regex = "0.11.0"
bstr = "1.4.0"
rayon = "1.7.0"


[dev-dependencies]
chrono = "0.4.24"
serde_test = "1.0.158"
tokio = { version = "1.26.0", features = ["full"] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
